Add SessionsController and view for login.

--- a/app/views/shared/_header.slim
+++ b/app/views/shared/_header.slim
@@ -5,4 +5,4 @@ nav.navbar.navbar-default
 
     ul.nav.navbar-nav.navbar-right
       li
-        = link_to 'Login', '#'
+        = link_to 'Login', login_path
