--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -12,4 +12,5 @@ html
       = render partial: 'shared/header'
     main
       .container
+        == render partial: 'shared/flash'
         == yield
