--- a/app/views/shared/_header.slim
+++ b/app/views/shared/_header.slim
@@ -5,4 +5,8 @@ nav.navbar.navbar-default
 
     ul.nav.navbar-nav.navbar-right
       li
-        = link_to 'Login', login_path
+        - if current_user.present?
+          = link_to 'Logout', logout_path, method: :delete
+        - else
+          = link_to 'Login', login_path
+
