Show schedule list only if dates are presented.

--- a/app/views/dashboards/show.html.slim
+++ b/app/views/dashboards/show.html.slim
@@ -7,4 +7,5 @@ h1 Dashboards
       = f.input :to_date, as: :string, input_html: { type: 'date', value: @to_date }
       = f.submit 'Show', class: 'btn btn-success btn-lg'
 
-  = render partial: 'schedule'
+  - if @schedule.present?
+    = render partial: 'schedule'
